alpm-types/src/snapshots/url::test_source_url_parsing_failure@case_7.snap
---
source: alpm-types/src/url.rs
---
error: invalid or duplicate query parameter for detected VCS.
 | 
 | hg+https://example/project#branch=feature?signed
 | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
 | 
 = while parsing:
   source url: (hg+https://example/p…)
   → invalid or duplicate query parameter for detected VCS.
